--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,13 +8,12 @@
     <menu class="sidebar-menu">
 {% for post in site.posts %}
   <li class="menu-items">
-    <a class="menu-links" href="{{ post.url }}">{{ post.title }}</a>
+    <a class="menu-links" href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
   </li>
 {% endfor %}
-
     </menu>
 
- 
+
 
   </div>
 </aside>
